Fix parallel job dropwdown cutoff
By adding a min-height to the pipeline graph
container equivalent to the dropdown height,
we are 100% certain that we will always have
enough space to show the job dropdown.

--- a/app/assets/stylesheets/pages/pipelines.scss
+++ b/app/assets/stylesheets/pages/pipelines.scss
@@ -444,6 +444,7 @@
 .pipeline-tab-content {
   display: flex;
   width: 100%;
+  min-height: $dropdown-max-height-lg;
   background-color: $gray-light;
   padding: $gl-padding 0;
   overflow: auto;
